	  This is actually a major rewrite which makes many things cleaner.
	  Thanks a lot to Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
	  for analyzing a hard to find bug introduced by changing types.
	- Fix regression from eix-0.26.1 of wrong <availableversions:VAR>
	  (used e.g. with --versionlines in default format).
	- Use cache of true filenames instead of heuristic recursion bounds.
	- Fix frequent warnings (mainly with pragmas).
	- Fix mkstemp name and a possible memory leak.
	- Allow --disable-silent-rules to follow Gentoo's policy, although
	  personally, I dislike it, and it is not necessary for eix.

*eix-0.26.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-test-obsolete: Add -q, "quick", use FORMAT_TEST_OBSOLETE,
	  support TEST_FOR_REDUNDANCY better
	- Fix masked-packages: Treat repository name in arguments correctly.
	- masked-packages: Treat - as standard input.
	- Fix USE=tools linking error (regression of eix-0.26.0), see
	  http://bugs.gentoo.org/show_bug.cgi?id=425512
	- Allow KEYWORDS='*' and KEYWORDS='~*' in ebuilds
	- Support profile-format=portage-2, see
	  http://bugs.gentoo.org/show_bug.cgi?id=426256
	- Introduce DEFAULT_ARCH and ./configure --with-default-arch
	- Use function pointers instead of case cascades
	  for FORMAT execution and for file parsing.
	  This is cleaner and might speed up things.
	- manpage: improve description of masked-packages
	- varsreader: Fix hang for DOS line ends, see
	  http://forums.gentoo.org/viewtopic-t-929536.html
	- Do not let (...) automagically choose the dep search, see
	  http://bugs.gentoo.org/show_bug.cgi?id=427644

*eix-0.26.0
	Артём Воротников <vorot93 at yandex.ru>:
	- Continued Russian translation and add fixes suggested by
	  Stanislav Cymbalov <dummyunit at gmail.com>.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add masked-packages
	- Introduce versionsort -[npvr]
	- Introduce plainversion and revision attributes
	- Introduce --pipe-name and --pipe-version