@@ -139,7 +139,7 @@ class VarsReader {
 
 		/** Looks if the following input is a valid secondary value-part.
 		 * ['"\^#\n\r\t ] is allowed.
-		 * [\n\r\t# ] -> ASSIGN_KEY_VALUE
+		 * [\n\r\t# ] (or [\n\r\t;|&)# ]) -> ASSIGN_KEY_VALUE
 		 * '\'' -> [RV] VALUE_SINGLE_QUOTE{_PORTAGE}
 		 * '"' -> [RV] VALUE_DOUBLE_QUOTE{_PORTAGE}
 		 * '\\' -> [RV] WHITESPACE_ESCAPE{_PORTAGE} | -> VALUE_WHITESPACE{_PORTAGE} */
@@ -171,7 +171,7 @@ class VarsReader {
 
 		/** Read value not enclosed in any quotes.
 		 * Thus there are no spaces and tabs allowed. Everything must be escaped.
-		 * Move INPUT into buffer while it's not in [ \t\n\r\\'"#].
+		 * Move INPUT into buffer while it's not in [ \t\n\r\\'"#;|&)].
 		 * If the value ends we call EVAL_READ.
 		 * [# \t\r\n] -> EVAL_READ |
 		 * '\\' -> WHITESCAPE_ESCAPE | \' -> VALUE_SINGLE_QUOTE |
