@@ -12,6 +12,7 @@
 	- Fix regression from eix-0.26.1 of wrong <availableversions:VAR>
 	  (used e.g. with --versionlines in default format).
 	- Use cache of true filenames instead of heuristic recursion bounds.
+	- Improve varsreader: Treat ;|&) as additional end symbols (like shell)
 	- Fix frequent warnings (mainly with pragmas).
 	- Fix mkstemp name and a possible memory leak.
 	- Allow --disable-silent-rules to follow Gentoo's policy, although
